src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Lighting_In_Room__c</fullName>
        <description>This field is to determine what kind of lightining should be there in room</description>
        <label>Lighting In Room</label>
        <picklist>
            <picklistValues>
                <fullName>Natural Daylight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overhead Fluorescent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task Lighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spotlights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Lamps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hanging Pendants</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Name_On_Yard_Sign__c</fullName>
        <description>This field determines the name on yard sign</description>
        <label>Name On Yard Sign</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neutral_Or_Bright_Colors__c</fullName>
        <label>Neutral Or Bright Colors</label>
        <picklist>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Of_Dry_Samples__c</fullName>
        <label># Of Dry Samples</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Wet_Samples__c</fullName>
        <label># Of Wet Samples</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Yard_Signs__c</fullName>
        <defaultValue>10</defaultValue>
        <description>This determine the number of yard signs required</description>
        <label>No. Of Yard Signs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Behr_Color_Formula__c</fullName>
        <description>Formula details for a non-behr color.</description>
        <label>Non-Behr Color Formula</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Behr_Color_Name__c</fullName>
        <description>Name of the Color belonging to non-behr competitor</description>
        <label>Non-Behr Color Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Behr_Is_Property_Mgmt_Close_Out_Book__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the property management is a close out book for non-behr clients.</description>
        <label>Is Property Mgmt Close Out Book(NonBehr)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shop Ship to</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Building_Colors_To_Consider__c</fullName>
        <description>This field is to define whether to consider other building colors</description>
        <label>Other Building Colors To Consider</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Colors__c</fullName>
        <label>Other Colors</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the property</description>
        <label>Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Owner)</relationshipLabel>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PN_Address__c</fullName>
        <label>PN Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_City__c</fullName>
        <label>PN City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Country__c</fullName>
        <defaultValue>&quot;US&quot;</defaultValue>
        <label>PN Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_State__c</fullName>
        <label>PN State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Zip__c</fullName>
        <label>PN Zip</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Address__c</fullName>
        <label>PO Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_City__c</fullName>
        <label>PO City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Country__c</fullName>
        <label>PO Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_State__c</fullName>
        <label>PO State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Zip__c</fullName>
        <label>PO Zip</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paint_is_bad_in_the_can__c</fullName>
        <label>Paint is bad in the can?</label>
        <picklist>
            <picklistValues>
                <fullName>Foul odor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jelly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheesy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skinning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too thick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Painted_By__c</fullName>
        <label>Painted By</label>
        <picklist>
            <picklistValues>
                <fullName>By Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By Contractor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Painted_Substrate__c</fullName>
        <label>Painted Substrate</label>
        <picklist>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drywall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Putty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Resistant Putty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previously Painted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wallpaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Photos_Of_Property_To_Emulate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A Check, if photos related to the property have been updated.</description>
        <label>Photos Of Property To Emulate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pro_Rep_phone__c</fullName>
        <formula>Behr_Representative__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro Rep Phone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Rewards_Card__c</fullName>
        <formula>Image(&quot;https://c.na5.content.force.com/servlet/servlet.FileDownload?file=01570000002E5Bz&quot;, &quot;Pro Rewards Card&quot;, 150,150)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro Rewards Card</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Rewards_Card_back__c</fullName>
        <formula>IMAGE(&quot;https://c.na5.content.force.com/servlet/servlet.FileDownload?file=01570000002E5W9&quot;, &quot;Pro Rewards back&quot; ,150,150)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro Rewards Card back</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Rewards_Phone__c</fullName>
        <formula>If(ISPICKVAL(Type_of_request__c, &quot;Yard Sign&quot;), null, Account.Pro_Rewards_Account_Number__c)</formula>
        <label>Pro Rewards Phone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Rewards_Tier__c</fullName>
        <formula>IF( ISPICKVAL(Type_of_request__c,&quot;Yard Sign&quot;),null,
  IF(ISPICKVAL(Account.Tier_Level__c, &quot;Gold&quot;), &quot;Gold&quot;, 
     IF(ISPICKVAL(Account.Tier_Level__c, &quot;Silver&quot;), &quot;Silver&quot;, &quot;Bronze&quot;)))</formula>
        <label>Pro Rewards Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Defected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Defected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>Product__r.Product_Line_English__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Refund_Agreement__c</fullName>
        <label>Product Refund Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product_Family_China__c</referenceTo>
        <relationshipLabel>Product Family</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Location__c</fullName>
        <description>This field describes the project location</description>
        <label>Project Location (Region)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>This field is to fefch the project name of the case</description>
        <inlineHelpText>Project Name = PN</inlineHelpText>
        <label>Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Size_in_Sq_meter__c</fullName>
        <label>Project Size(in Sq.meter)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Size_in_sq_ft__c</fullName>
        <formula>Project_Size_in_Sq_meter__c * 10.76</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Size(in sq.ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <inlineHelpText>Property Name = PN</inlineHelpText>
        <label>Property Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <inlineHelpText>Property Owner = PO</inlineHelpText>
        <label>Property Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Receipt_Number__c</fullName>
        <label>Purchase Receipt Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchased_QTY__c</fullName>
        <label>Purchased QTY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchased_QTY_size__c</fullName>
        <label>Purchased QTY Size</label>
        <picklist>
            <picklistValues>
                <fullName>QT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5G</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose_And_Function_Of_Space__c</fullName>
        <description>This field is to define the purpose nad function of the space</description>
        <label>Purpose And Function Of Space</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label># Of Printed Copies</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPSM_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RPSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Store_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Store Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to contact as a related store for china</description>
        <label>Related Store</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rendering_Type__c</fullName>
        <label>Rendering Type</label>
        <picklist>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rolling_Year_Sales__c</fullName>
        <formula>Account.Rolling_Year_CC_plus_DTP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rolling Year Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Account__c</fullName>
        <description>To be populated when the sap sync button is pressed on a job sheet</description>
        <label>SAP Account #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_shop_account__c</fullName>
        <formula>Opportunity__r.SAP_Shop_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP shop account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Invoices_To__c</fullName>
        <label>Send Invoices To</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Guidelines__c</fullName>
        <formula>IF(AND($RecordType.Name = &quot;Yard Sign / Pro Rewards Card&quot;,ISPICKVAL( Type_of_request__c ,&quot;Yard Sign&quot;)), &quot;3-4 Weeks&quot;,
IF(AND($RecordType.Name = &quot;Yard Sign / Pro Rewards Card&quot;,ISPICKVAL( Type_of_request__c ,&quot;Pro Rewards Card&quot;)), &quot;1-2 Weeks&quot;,
IF($RecordType.Name = &quot;Color Recommendation&quot;, &quot;1-2 Days (3 Schemes)&quot;,
IF($RecordType.Name = &quot;Digital Renderings&quot;, &quot;3-5 Days (1 Elevation, 3 Schemes)&quot;,
IF($RecordType.Name = &quot;Color Matching&quot;, &quot;3-5 Days (10 Colors)&quot;,
IF(AND($RecordType.Name = &quot;Color Book/Board&quot;, ISPICKVAL(Color_BookBoard_Type__c, &quot;Color Book&quot;) ) , &quot;4-6 Days&quot;,
IF(AND($RecordType.Name = &quot;Color Book/Board&quot;, ISPICKVAL(Color_BookBoard_Type__c, &quot;Color Board&quot;) ) , &quot;2-3 Weeks&quot;,
IF(AND($RecordType.Name = &quot;Color Book/Board&quot;, ISPICKVAL(Color_BookBoard_Type__c, &quot;Color Submittal&quot;) ) , &quot;5 Days&quot;, 
IF(AND($RecordType.Name = &quot;Color Book/Board&quot;, ISPICKVAL(Color_BookBoard_Type__c, &quot;Close Out Book&quot;) ) , &quot;5 Days&quot;, 
IF($RecordType.Name = &quot;Color Approval&quot;, &quot;1 Week&quot;,
IF($RecordType.Name = &quot;Draw Downs&quot;, &quot;3 Days for BEHR/KILZ, 5 Days for Competitor (15 Draw Downs)&quot;,
IF($RecordType.Name = &quot;Color Formula&quot;, &quot;1 Day&quot;,
NULL))))))))))))</formula>
        <inlineHelpText>&quot;Day 0 begins when the complete request is submitted to Color Services by 2 p.m. PST (business days only). For requests that are submitted after 2 p.m. PST, day 0 begins the next business day.&quot;</inlineHelpText>
        <label>Service Guidelines</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Sample_To__c</fullName>
        <formula>&quot;Behr Process Corporation&quot;  +BR() &amp;
&quot;Attn: Color Lab&quot; +BR() &amp;
&quot;3100 S Yale Street&quot; +BR() &amp;
&quot;Santa Ana, CA 92704&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the address to use when shipping the sample.</inlineHelpText>
        <label>Ship Sample To:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street__c</fullName>
        <label>Ship To Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip__c</fullName>
        <label>Ship To Zip</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <label>Ship To</label>
        <picklist>
            <picklistValues>
                <fullName>Ship to Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship to Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sign_Name__c</fullName>
        <label>Sign Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_Phone__c</fullName>
        <label>Sign Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Site_Is_Painted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inspection Done?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Tag_Line__c</fullName>
        <description>This field describes the special tag line for yard sign</description>
        <label>Special Tag Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Substrate_Condition_Other__c</fullName>
        <label>Substrate Condition Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substrate_Condition__c</fullName>
        <label>Substrate Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Glossy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smooth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Textured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suggestion_Given_to_Customer__c</fullName>
        <label>Suggestion Given to Customer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Page__c</fullName>
        <description>Provides the summary of the Approval</description>
        <label>Summary Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Temperature_during_application__c</fullName>
        <label>Temperature during application</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_Page__c</fullName>
        <description>Title for the approved color</description>
        <label>Title Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_of_Color_Formula_requests__c</fullName>
        <label>Total # Of Color Formula Requests</label>
        <summarizedField>Scheme__c.of_color_formula_requests__c</summarizedField>
        <summaryForeignKey>Scheme__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_of_EFB_requests__c</fullName>
        <label>Total # Of EFB Requests</label>
        <summarizedField>Scheme__c.EFB_requests__c</summarizedField>
        <summaryForeignKey>Scheme__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_of_drawdowns__c</fullName>
        <label>Total # Of Draw Downs</label>
        <summarizedField>Scheme__c.of_draw_downs__c</summarizedField>
        <summaryForeignKey>Scheme__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type_Of_Paper__c</fullName>
        <label>Type Of Paper</label>
        <picklist>
            <picklistValues>
                <fullName>Card Stock</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Glossy Paper</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_request__c</fullName>
        <label>Type Of Request</label>
        <picklist>
            <picklistValues>
                <fullName>Yard Sign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Rewards Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wet_Sample_Description__c</fullName>
        <label>Wet Sample Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_applicator_was_used__c</fullName>
        <label>What applicator was used</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_cleaner_was_used__c</fullName>
        <label>What cleaner was used</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_was_issued_detected__c</fullName>
        <label>When was issue detected</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_was_paint_applied__c</fullName>
        <label>When was paint applied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Who_Applied_the_Paint__c</fullName>
        <label>Who Applied the Paint</label>
        <picklist>
            <picklistValues>
                <fullName>DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deco Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painting Crew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Painter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>YTD_Sales__c</fullName>
        <formula>Account.TYTD_C_C_plus_DTP__c</formula>
        <label>YTD Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yard_Sign_1__c</fullName>
        <formula>IMAGE(&quot;https://c.na5.content.force.com/servlet/servlet.FileDownload?file=01570000002E5C1&quot;, &quot;option 1&quot;, 150,150)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yard Sign 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yard_Sign_2__c</fullName>
        <formula>IMAGE(&quot;https://c.na5.content.force.com/servlet/servlet.FileDownload?file=01570000002E5C0&quot;, &quot;Yard Sign&quot; ,150,150)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yard Sign 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>color_Number__c</fullName>
        <label>Color Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Cards__c</fullName>
        <label># Of Cards</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Color_Books__c</fullName>
        <description># of color books added to color book case</description>
        <label># of Color Books</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_schemes__c</fullName>
        <label># Of Schemes</label>
        <summaryForeignKey>Scheme__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sortl__c</fullName>
        <displayFormat>C-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>sortl</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>total_of_colors__c</fullName>
        <label>Total # Of Colors</label>
        <summarizedField>Scheme__c.of_colors__c</summarizedField>
        <summaryForeignKey>Scheme__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllCases_assigned_to_me</fullName>
        <filterScope>Mine</filterScope>
        <label>All Cases assigned to me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOpenChinaCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.China_Inquiry_Case,Case.China_Issue_Case</value>
        </filters>
        <label>All Open China Cases</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>China_Users</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_China_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.China_Inquiry_Case,Case.China_Issue_Case</value>
        </filters>
        <label>All China Cases</label>
        <language>en_US</language>
        <sharedTo>
            <role>China_Users</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_cases_created_by_me</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>Approval_Status__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_user_check__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>notEqual</operation>
        </filters>
        <label>Cases Created by me - All</label>
        <language>en_US</language>
        <sharedTo>
            <role>SystemAdministrator</role>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>IT_DEV</roleAndSubordinates>
            <roleAndSubordinates>NAM_VP</roleAndSubordinates>
            <roleAndSubordinates>PRSVP</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_cases_created_by_meclosed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>Approval_Status__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_user_check__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>notEqual</operation>
        </filters>
        <label>Cases Created by me - Closed</label>
        <language>en_US</language>
        <sharedTo>
            <role>SystemAdministrator</role>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>IT_DEV</roleAndSubordinates>
            <roleAndSubordinates>NAM_VP</roleAndSubordinates>
            <roleAndSubordinates>PRSVP</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>